syntax = "proto3";

option csharp_namespace = "DemoApp";

package Shopping;

service ShopKeeper {
  rpc GetItemInfo (ItemInfoRequest) returns (ItemInfoReply);
  rpc GetBulkDiscount (BulkDiscountRequest) returns (BulkDiscountReply);
}

message ItemInfoRequest {
  string name = 1;
}

message ItemInfoReply {
	int32 currentStock = 1;
	double unitPrice = 2;
}

message BulkDiscountRequest {
  int32 quantity = 1;
}

message BulkDiscountReply {
	float rate = 1;
}

